--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -110,6 +110,9 @@
             <layout class="QHBoxLayout" name="horizontalLayout_10">
              <item>
               <widget class="QPushButton" name="createContainerBtn">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="text">
                 <string>Create...</string>
                </property>
@@ -210,7 +213,8 @@
                 <string>Info...</string>
                </property>
                <property name="icon">
-                <iconset theme="dialog-information"/>
+                <iconset theme="dialog-information">
+                 <normaloff>.</normaloff>.</iconset>
                </property>
               </widget>
              </item>
