--- a/createContainer.ui
+++ b/createContainer.ui
@@ -120,7 +120,7 @@
         <x>0</x>
         <y>0</y>
         <width>487</width>
-        <height>99</height>
+        <height>68</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -196,7 +196,7 @@
       <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0">
-         <widget class="QCheckBox" name="checkBox_5">
+         <widget class="QCheckBox" name="isInteractive">
           <property name="text">
            <string>Interactive</string>
           </property>
