--- a/createContainer.ui
+++ b/createContainer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>559</height>
+    <height>668</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -56,7 +56,10 @@
    <item row="5" column="1">
     <widget class="QSpinBox" name="ramGBInput">
      <property name="minimum">
-      <number>4</number>
+      <number>0</number>
+     </property>
+     <property name="value">
+      <number>0</number>
      </property>
     </widget>
    </item>
@@ -70,7 +73,10 @@
    <item row="6" column="1">
     <widget class="QSpinBox" name="numOfCPUInput">
      <property name="minimum">
-      <number>1</number>
+      <number>0</number>
+     </property>
+     <property name="value">
+      <number>0</number>
      </property>
     </widget>
    </item>
@@ -138,49 +144,8 @@
    <item row="9" column="0">
     <widget class="QLabel" name="volumesLabel">
      <property name="text">
-      <string>Volumes</string>
+      <string>Shared Folders</string>
      </property>
-    </widget>
-   </item>
-   <item row="9" column="1">
-    <widget class="QScrollArea" name="scrollArea_2">
-     <property name="widgetResizable">
-      <bool>true</bool>
-     </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents_2">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>487</width>
-        <height>68</height>
-       </rect>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout">
-           <item>
-            <widget class="QCheckBox" name="checkBox_4">
-             <property name="text">
-              <string>Volume 1</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEdit">
-             <property name="text">
-              <string>Mount Point</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
     </widget>
    </item>
    <item row="10" column="0">
@@ -217,9 +182,9 @@
    <item row="12" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="okBtn">
        <property name="text">
-        <string>?</string>
+        <string>OK</string>
        </property>
       </widget>
      </item>
@@ -231,9 +196,9 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="okBtn">
+      <widget class="QPushButton" name="pushButton_3">
        <property name="text">
-        <string>OK</string>
+        <string>?</string>
        </property>
       </widget>
      </item>
@@ -264,6 +229,88 @@
      <property name="text">
       <string>Devices</string>
      </property>
+    </widget>
+   </item>
+   <item row="9" column="1">
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QTableWidget" name="sharedFolderTblCtn">
+        <property name="selectionMode">
+         <enum>QAbstractItemView::SingleSelection</enum>
+        </property>
+        <property name="selectionBehavior">
+         <enum>QAbstractItemView::SelectRows</enum>
+        </property>
+        <column>
+         <property name="text">
+          <string>Path</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Mount Point</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Access Right</string>
+         </property>
+        </column>
+       </widget>
+      </item>
+      <item alignment="Qt::AlignTop">
+       <widget class="QWidget" name="widget_2" native="true">
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <widget class="QPushButton" name="addVolBtn">
+           <property name="font">
+            <font>
+             <pointsize>8</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Add</string>
+           </property>
+           <property name="icon">
+            <iconset theme="list-add"/>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="delVolBtn">
+           <property name="font">
+            <font>
+             <pointsize>8</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Delete</string>
+           </property>
+           <property name="icon">
+            <iconset theme="list-remove"/>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="modVolBtn">
+           <property name="font">
+            <font>
+             <pointsize>8</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Modify</string>
+           </property>
+           <property name="icon">
+            <iconset theme="edit-select-all"/>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
