CPU and memory constraint in creation

--- a/createContainer.ui
+++ b/createContainer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>668</height>
+    <height>890</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,6 +23,9 @@
    <bool>true</bool>
   </property>
   <layout class="QFormLayout" name="formLayout_2">
+   <property name="labelAlignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
    <item row="0" column="0">
     <layout class="QFormLayout" name="formLayout"/>
    </item>
@@ -54,7 +57,7 @@
     </widget>
    </item>
    <item row="5" column="1">
-    <widget class="QSpinBox" name="ramGBInput">
+    <widget class="QSpinBox" name="ramMBInput">
      <property name="minimum">
       <number>0</number>
      </property>
@@ -70,16 +73,6 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
-    <widget class="QSpinBox" name="numOfCPUInput">
-     <property name="minimum">
-      <number>0</number>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
-   </item>
    <item row="7" column="0">
     <widget class="QLabel" name="networkLabel">
      <property name="text">
@@ -92,6 +85,21 @@
      <item>
       <property name="text">
        <string>(default)</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>bridge</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>host</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>none</string>
       </property>
      </item>
     </widget>
@@ -125,8 +133,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>487</width>
-        <height>68</height>
+        <width>390</width>
+        <height>102</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -273,7 +281,8 @@
             <string>Add</string>
            </property>
            <property name="icon">
-            <iconset theme="list-add"/>
+            <iconset theme="list-add">
+             <normaloff>.</normaloff>.</iconset>
            </property>
           </widget>
          </item>
@@ -288,7 +297,8 @@
             <string>Delete</string>
            </property>
            <property name="icon">
-            <iconset theme="list-remove"/>
+            <iconset theme="list-remove">
+             <normaloff>.</normaloff>.</iconset>
            </property>
           </widget>
          </item>
@@ -303,7 +313,8 @@
             <string>Modify</string>
            </property>
            <property name="icon">
-            <iconset theme="edit-select-all"/>
+            <iconset theme="edit-select-all">
+             <normaloff>.</normaloff>.</iconset>
            </property>
           </widget>
          </item>
@@ -311,6 +322,13 @@
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QDoubleSpinBox" name="numOfCPUInput">
+     <property name="decimals">
+      <number>1</number>
+     </property>
     </widget>
    </item>
   </layout>
