--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -82,7 +82,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="containerTab">
        <attribute name="title">
@@ -111,7 +111,7 @@
              <item>
               <widget class="QPushButton" name="createContainerBtn">
                <property name="enabled">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="text">
                 <string>Create...</string>
@@ -136,6 +136,19 @@
                </property>
                <property name="flat">
                 <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_7">
+               <property name="text">
+                <string>Pause</string>
+               </property>
+               <property name="icon">
+                <iconset theme="media-playback-pause"/>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
