Port mapping, GPU add fix

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -73,7 +73,7 @@
         </property>
         <property name="icon">
          <iconset theme="view-refresh">
-          <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
+          <normaloff>../.designer/.designer/.designer/backup</normaloff>../.designer/.designer/.designer/backup</iconset>
         </property>
        </widget>
       </item>
@@ -118,7 +118,7 @@
                </property>
                <property name="icon">
                 <iconset theme="document-new">
-                 <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
+                 <normaloff>../.designer/.designer/.designer/backup</normaloff>../.designer/.designer/.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -132,7 +132,7 @@
                </property>
                <property name="icon">
                 <iconset theme="media-playback-start">
-                 <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
+                 <normaloff>../.designer/.designer/.designer/backup</normaloff>../.designer/.designer/.designer/backup</iconset>
                </property>
                <property name="flat">
                 <bool>false</bool>
@@ -146,7 +146,7 @@
                </property>
                <property name="icon">
                 <iconset theme="media-playback-pause">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
                <property name="checkable">
                 <bool>true</bool>
@@ -163,7 +163,7 @@
                </property>
                <property name="icon">
                 <iconset theme="media-playback-stop">
-                 <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
+                 <normaloff>../.designer/.designer/.designer/backup</normaloff>../.designer/.designer/.designer/backup</iconset>
                </property>
                <property name="flat">
                 <bool>false</bool>
@@ -180,7 +180,7 @@
                </property>
                <property name="icon">
                 <iconset theme="document-save-as">
-                 <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
+                 <normaloff>../.designer/.designer/.designer/backup</normaloff>../.designer/.designer/.designer/backup</iconset>
                </property>
                <property name="flat">
                 <bool>false</bool>
@@ -197,7 +197,7 @@
                </property>
                <property name="icon">
                 <iconset theme="edit-delete">
-                 <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
+                 <normaloff>../.designer/.designer/.designer/backup</normaloff>../.designer/.designer/.designer/backup</iconset>
                </property>
                <property name="flat">
                 <bool>false</bool>
@@ -214,7 +214,7 @@
                </property>
                <property name="icon">
                 <iconset theme="utilities-terminal">
-                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
+                 <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -228,7 +228,7 @@
                </property>
                <property name="icon">
                 <iconset theme="dialog-information">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -308,7 +308,7 @@
                </property>
                <property name="icon">
                 <iconset theme="edit-find">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -319,7 +319,7 @@
                </property>
                <property name="icon">
                 <iconset theme="edit-delete">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -330,7 +330,7 @@
                </property>
                <property name="icon">
                 <iconset theme="document-save">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -341,7 +341,7 @@
                </property>
                <property name="icon">
                 <iconset theme="document-send">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -352,7 +352,7 @@
                </property>
                <property name="icon">
                 <iconset theme="document-open">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -363,7 +363,7 @@
                </property>
                <property name="icon">
                 <iconset theme="document-save-as">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
                </property>
               </widget>
              </item>
@@ -438,7 +438,7 @@
               </property>
               <property name="icon">
                <iconset theme="document-new">
-                <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
+                <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
               </property>
              </widget>
             </item>
@@ -449,7 +449,7 @@
               </property>
               <property name="icon">
                <iconset theme="edit-delete">
-                <normaloff>../.designer/backup</normaloff>../.designer/backup</iconset>
+                <normaloff>../.designer/.designer/backup</normaloff>../.designer/.designer/backup</iconset>
               </property>
              </widget>
             </item>
