--- a/createContainer.ui
+++ b/createContainer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>678</height>
+    <height>752</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -49,14 +49,14 @@
    <item row="4" column="1">
     <widget class="QComboBox" name="sourceImageCbx"/>
    </item>
-   <item row="5" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="rAMGBLabel">
      <property name="text">
       <string>RAM (MB, 0=unlimited)</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
+   <item row="6" column="1">
     <widget class="QSpinBox" name="ramMBInput">
      <property name="minimum">
       <number>0</number>
@@ -66,21 +66,21 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="ofCPULabel">
      <property name="text">
       <string># of CPU (0=all)</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="8" column="0">
     <widget class="QLabel" name="networkLabel">
      <property name="text">
       <string>Network</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="1">
+   <item row="8" column="1">
     <widget class="QComboBox" name="networkComboBox">
      <item>
       <property name="text">
@@ -104,7 +104,7 @@
      </item>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QLabel" name="gpuLabel">
      <property name="enabled">
       <bool>false</bool>
@@ -114,7 +114,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QScrollArea" name="gpuListScl">
      <property name="enabled">
       <bool>false</bool>
@@ -155,21 +155,21 @@
      </widget>
     </widget>
    </item>
-   <item row="10" column="0">
+   <item row="11" column="0">
     <widget class="QLabel" name="volumesLabel">
      <property name="text">
       <string>Shared Folders</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="optionsLabel">
      <property name="text">
       <string>Options</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="12" column="1">
     <widget class="QWidget" name="optionsWidget" native="true">
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
@@ -200,7 +200,7 @@
      </layout>
     </widget>
    </item>
-   <item row="13" column="1">
+   <item row="14" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QPushButton" name="okBtn">
@@ -225,7 +225,7 @@
      </item>
     </layout>
    </item>
-   <item row="12" column="1">
+   <item row="13" column="1">
     <widget class="QWidget" name="devicesWidget" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
@@ -245,14 +245,14 @@
      </layout>
     </widget>
    </item>
-   <item row="12" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="devicesLabel">
      <property name="text">
       <string>Devices</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="11" column="1">
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
@@ -343,7 +343,7 @@
      </layout>
     </widget>
    </item>
-   <item row="6" column="1">
+   <item row="7" column="1">
     <widget class="QDoubleSpinBox" name="numOfCPUInput">
      <property name="decimals">
       <number>1</number>
@@ -366,7 +366,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
+   <item row="10" column="0">
     <widget class="QLabel" name="portMappingLbl">
      <property name="enabled">
       <bool>false</bool>
@@ -376,80 +376,43 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
-    <widget class="QWidget" name="portMappingDisplay" native="true">
-     <property name="enabled">
-      <bool>true</bool>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Hostname</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QTableWidget" name="tableWidget">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="editTriggers">
-         <set>QAbstractItemView::AllEditTriggers</set>
-        </property>
-        <property name="selectionMode">
-         <enum>QAbstractItemView::SingleSelection</enum>
-        </property>
-        <property name="selectionBehavior">
-         <enum>QAbstractItemView::SelectRows</enum>
-        </property>
-        <row>
-         <property name="text">
-          <string/>
-         </property>
-        </row>
-        <column>
-         <property name="text">
-          <string>Container</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Host</string>
-         </property>
-        </column>
-       </widget>
-      </item>
-      <item>
-       <widget class="QWidget" name="widget_4" native="true">
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QPushButton" name="pushButton">
-           <property name="font">
-            <font>
-             <pointsize>8</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>Add</string>
-           </property>
-           <property name="icon">
-            <iconset theme="list-add"/>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_2">
-           <property name="font">
-            <font>
-             <pointsize>8</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>Delete</string>
-           </property>
-           <property name="icon">
-            <iconset theme="list-remove"/>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-     </layout>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QLineEdit" name="lineEdit"/>
+   </item>
+   <item row="10" column="1">
+    <widget class="QTableWidget" name="portmapTbl">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="sizeAdjustPolicy">
+      <enum>QAbstractScrollArea::AdjustToContents</enum>
+     </property>
+     <property name="rowCount">
+      <number>3</number>
+     </property>
+     <row/>
+     <row/>
+     <row/>
+     <column>
+      <property name="text">
+       <string>In Container</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>In Host</string>
+      </property>
+     </column>
     </widget>
    </item>
   </layout>
