--- a/commitContainer.ui
+++ b/commitContainer.ui
@@ -28,7 +28,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEdit"/>
+       <widget class="QLineEdit" name="imageNameInp"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
@@ -38,7 +38,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="lineEdit_2">
+       <widget class="QLineEdit" name="authorInp">
         <property name="placeholderText">
          <string>e.g. Abdul Hamid &lt;hamid@nowhere.net&gt;</string>
         </property>
