--- a/createContainer.ui
+++ b/createContainer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>752</height>
+    <height>862</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -87,21 +87,6 @@
        <string>(default)</string>
       </property>
      </item>
-     <item>
-      <property name="text">
-       <string>bridge</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>host</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>none</string>
-      </property>
-     </item>
     </widget>
    </item>
    <item row="9" column="0">
@@ -142,6 +127,12 @@
         <width>475</width>
         <height>68</height>
        </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
