--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -82,7 +82,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="containerTab">
        <attribute name="title">
@@ -248,6 +248,11 @@
             </property>
             <column>
              <property name="text">
+              <string>ID</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
               <string>Name</string>
              </property>
             </column>
@@ -264,11 +269,6 @@
             <column>
              <property name="text">
               <string>Status</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>ID</string>
              </property>
             </column>
            </widget>
@@ -378,6 +378,14 @@
             <property name="selectionBehavior">
              <enum>QAbstractItemView::SelectRows</enum>
             </property>
+            <property name="sortingEnabled">
+             <bool>true</bool>
+            </property>
+            <column>
+             <property name="text">
+              <string>ID</string>
+             </property>
+            </column>
             <column>
              <property name="text">
               <string>Name</string>
