--- a/infoContainer.ui
+++ b/infoContainer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>533</width>
-    <height>510</height>
+    <width>655</width>
+    <height>863</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,55 +56,97 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="netUsageDsp"/>
+       <widget class="QLineEdit" name="netUsageDsp">
+        <property name="placeholderText">
+         <string>Not Implemented</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QTreeWidget" name="containerAttrTree">
-     <column>
-      <property name="text">
-       <string>Key</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Value</string>
-      </property>
-     </column>
-     <item>
-      <property name="text">
-       <string>ncpus</string>
-      </property>
-      <property name="text">
-       <string>4</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>x</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <item>
-       <property name="text">
-        <string>x1</string>
-       </property>
-       <property name="text">
-        <string>a</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>x2</string>
-       </property>
-       <property name="text">
-        <string>abc</string>
-       </property>
-      </item>
-     </item>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
+       <string>Attributes</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QTreeWidget" name="containerAttrTree">
+         <column>
+          <property name="text">
+           <string>Key</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Value</string>
+          </property>
+         </column>
+         <item>
+          <property name="text">
+           <string>ncpus</string>
+          </property>
+          <property name="text">
+           <string>4</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>x</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <item>
+           <property name="text">
+            <string>x1</string>
+           </property>
+           <property name="text">
+            <string>a</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>x2</string>
+           </property>
+           <property name="text">
+            <string>abc</string>
+           </property>
+          </item>
+         </item>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_2">
+      <attribute name="title">
+       <string>Processes</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QLabel" name="notRunningLbl">
+         <property name="text">
+          <string>This container is not running</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTableView" name="procView">
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
+         <property name="sortingEnabled">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
    <item>
