--- a/QtDocker/ui/createContainer.ui
+++ b/QtDocker/ui/createContainer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>862</height>
+    <height>894</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -73,14 +73,14 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QLabel" name="networkLabel">
      <property name="text">
       <string>Network</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QComboBox" name="networkComboBox">
      <item>
       <property name="text">
@@ -89,7 +89,7 @@
      </item>
     </widget>
    </item>
-   <item row="9" column="0">
+   <item row="10" column="0">
     <widget class="QLabel" name="gpuLabel">
      <property name="enabled">
       <bool>false</bool>
@@ -99,7 +99,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
+   <item row="10" column="1">
     <widget class="QScrollArea" name="gpuListScl">
      <property name="enabled">
       <bool>false</bool>
@@ -146,21 +146,21 @@
      </widget>
     </widget>
    </item>
-   <item row="11" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="volumesLabel">
      <property name="text">
       <string>Shared Folders</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="optionsLabel">
      <property name="text">
       <string>Options</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="1">
+   <item row="13" column="1">
     <widget class="QWidget" name="optionsWidget" native="true">
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
@@ -173,7 +173,7 @@
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QCheckBox" name="checkBox_6">
+         <widget class="QCheckBox" name="useX11Chk">
           <property name="text">
            <string>Use X11 support</string>
           </property>
@@ -191,7 +191,7 @@
      </layout>
     </widget>
    </item>
-   <item row="14" column="1">
+   <item row="15" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QPushButton" name="okBtn">
@@ -216,16 +216,9 @@
      </item>
     </layout>
    </item>
-   <item row="13" column="1">
+   <item row="14" column="1">
     <widget class="QWidget" name="devicesWidget" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_5">
-      <item>
-       <widget class="QCheckBox" name="checkBox_7">
-        <property name="text">
-         <string>Serial Port</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <widget class="QCheckBox" name="checkBox_8">
         <property name="text">
@@ -233,17 +226,68 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QWidget" name="widget_3" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QCheckBox" name="serialPortChk">
+           <property name="text">
+            <string>Serial Port</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="serialPortChooser">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <item>
+            <property name="text">
+             <string>/dev/ttyUSB0</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>/dev/ttyUSB1</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>/dev/ttyACM0</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>/dev/ttyS0</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>/dev/ttyS1</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
-   <item row="13" column="0">
+   <item row="14" column="0">
     <widget class="QLabel" name="devicesLabel">
      <property name="text">
       <string>Devices</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="12" column="1">
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
@@ -357,7 +401,7 @@
      </property>
     </widget>
    </item>
-   <item row="10" column="0">
+   <item row="11" column="0">
     <widget class="QLabel" name="portMappingLbl">
      <property name="enabled">
       <bool>false</bool>
@@ -377,13 +421,19 @@
    <item row="5" column="1">
     <widget class="QLineEdit" name="lineEdit"/>
    </item>
-   <item row="10" column="1">
+   <item row="11" column="1">
     <widget class="QTableWidget" name="portmapTbl">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>128</height>
+      </size>
      </property>
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContents</enum>
@@ -406,8 +456,56 @@
      </column>
     </widget>
    </item>
+   <item row="8" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Restart Policy</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1">
+    <widget class="QComboBox" name="restartPolCbx">
+     <item>
+      <property name="text">
+       <string>No (Default)</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>On failure, retry 3 times</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Always</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Unless stopped</string>
+      </property>
+     </item>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>serialPortChk</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>serialPortChooser</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>206</x>
+     <y>816</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>329</x>
+     <y>822</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
